# Learning-OpenGL

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup.bat  setup.sh  vcpkg.json
cmake/: compiler_warnings.cmake  dependencies.cmake  options.cmake  vcpkg.cmake
cmake/toolchains/: x64.cmake  x86.cmake
include/glad/: gl.h
resources/materials/: crate.mat  debug.mat  default.mat  light.mat
resources/shaders/: Simple3D.fragGL  Simple3D.vertGL  basic.fragGL  basic.vertGL  default.frag  default.vert  light.frag  shadable.frag  shadable.vert  texShadable.frag  texShadable.vert
resources/shaders/Basic/: basic_FRAG.shader  basic_VERT.shader
resources/shaders/BasicPlane/: BasicPlane_FRAG.shader  BasicPlane_VERT.shader
resources/shaders/Lighting/: Cube_FRAG.shader  Cube_VERT.shader  Light_FRAG.shader  Light_VERT.shader  Lighting_FRAG.shader
resources/shaders/Simple3D/: Simple3D_FRAG.shader  Simple3D_VERT.shader
src/: IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Util.h  Vertex.h  VertexArray.h  VertexBuffer.h  main.cpp
src/Core/: AssetPool.h  IncludeAll.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Parser.cpp  Parser.h  Renderer.cpp  Renderer.h  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Util.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Core/Render/: IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.h  Model.cpp  Model.h  Parser.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Extra/: Camera.cpp  Camera.h  GameObject.h  Light.h  LightData.h  LightObject.h  Object.h
src/Extra/Objects/: Camera.cpp  Camera.h  Cube.h  LightSource.cpp  LightSource.h
src/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Scene/Scenes/: Scene_BasicPlane.cpp  Scene_BasicPlane.h  Scene_BatchRendering.cpp  Scene_BatchRendering.h  Scene_ClearColor.cpp  Scene_ClearColor.h  Scene_DiffuseMaps.cpp  Scene_DiffuseMaps.h  Scene_Lighting.cpp  Scene_Lighting.h  Scene_Material.cpp  Scene_Material.h  Scene_Menu.cpp  Scene_Menu.h  Scene_ModelLoading.cpp  Scene_ModelLoading.h  Scene_Simple3D.cpp  Scene_Simple3D.h  Scene_Simple3D_Camera.cpp  Scene_Simple3D_Camera.h  Scene_Texture2D.cpp  Scene_Texture2D.h
src/Scene/Scenes/ModelLoading/: Scene_ModelLoading.cpp  Scene_ModelLoading.h
src/core/: Application.cpp  Application.h  AssetPool.h  OpenGL.h  Parser.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  Util.h
src/renderer/: IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/sandbox/: Scene_Menu.cpp  Scene_Menu.h
src/sandbox/01_ClearColor/: Scene_ClearColor.cpp  Scene_ClearColor.h
src/sandbox/02_BasicPlane/: Scene_BasicPlane.cpp  Scene_BasicPlane.h
src/sandbox/03_Texture2D/: Scene_Texture2D.cpp  Scene_Texture2D.h
src/sandbox/04_Simple3D/: Scene_Simple3D.cpp  Scene_Simple3D.h
src/sandbox/05_Simple3D_Camera/: Scene_Simple3D_Camera.cpp  Scene_Simple3D_Camera.h
src/sandbox/06_Lighting/: Scene_Lighting.cpp  Scene_Lighting.h
src/sandbox/07_Material/: Scene_Material.cpp  Scene_Material.h
src/sandbox/08_DiffuseMaps/: Scene_DiffuseMaps.cpp  Scene_DiffuseMaps.h
src/sandbox/09_ModelLoading/: Scene_ModelLoading.cpp  Scene_ModelLoading.h
src/scene/: Camera.cpp  GameObject.h  LightObject.h  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h
